--- a/src/App.css
+++ b/src/App.css
@@ -2,11 +2,16 @@
   text-align: center;
 }
 
+button{
+
+   margin: 0 5px;
+}
+
 table , th {
 
     
     margin: 0 auto;
-    width:190px;
+    width:300px;
     margin-top: 5px;
    
     
